서버 연동 선공
로그인 및 회원가입 성공

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "MySql": "server=localhost;port=3306;database=rigidboys;uid=root;pwd=1234;"
+    "MySql": "server=localhost;port=3306;database=rigidboys;uid=root;pwd=rigid1234;"
   },
   "Jwt": {
     "_comment" : "JWT토큰 서명에 사용됩니다.",
